feat: 公共模式
