# jrag-server/src/main/java/io/github/jerryt92/jrag/controller/LoginController.java
@@ -1,5 +1,7 @@
 package io.github.jerryt92.jrag.controller;
 
+import io.github.jerryt92.jrag.config.CommonProperties;
+import io.github.jerryt92.jrag.model.GetMode200Response;
 import io.github.jerryt92.jrag.model.LoginRequestDto;
 import io.github.jerryt92.jrag.model.SlideCaptchaResp;
 import io.github.jerryt92.jrag.model.VerifySlideCaptcha200Response;
@@ -7,13 +9,12 @@ import io.github.jerryt92.jrag.model.security.SessionBo;
 import io.github.jerryt92.jrag.server.api.LoginApi;
 import io.github.jerryt92.jrag.service.security.CaptchaService;
 import io.github.jerryt92.jrag.service.security.LoginService;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RestController;
-
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class LoginController implements LoginApi {
@@ -21,12 +22,19 @@ public class LoginController implements LoginApi {
     private final HttpServletResponse response;
     private final LoginService loginService;
     private final CaptchaService captchaService;
+    private final CommonProperties commonProperties;
 
-    public LoginController(HttpServletRequest request, HttpServletResponse response, LoginService loginService, CaptchaService captchaService) {
+    public LoginController(HttpServletRequest request, HttpServletResponse response, LoginService loginService, CaptchaService captchaService, CommonProperties commonProperties) {
         this.request = request;
         this.response = response;
         this.loginService = loginService;
         this.captchaService = captchaService;
+        this.commonProperties = commonProperties;
+    }
+
+    @Override
+    public ResponseEntity<GetMode200Response> getMode() {
+        return ResponseEntity.ok(new GetMode200Response().mode(commonProperties.publicMode ? GetMode200Response.ModeEnum.PUBLIC : GetMode200Response.ModeEnum.USER));
     }
 
     @Override
